--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <EditText
-            android:id="@+id/editTextTextPersonName3"
+            android:id="@+id/editUserID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -28,7 +28,7 @@
             android:text="@string/edit_userId" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName4"
+            android:id="@+id/editContext"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -36,7 +36,7 @@
             android:text="@string/edit_context" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/button_sendAuth"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/button_send" />
