--- a/helios-sampleapp/src/main/res/layout/item_card_list.xml
+++ b/helios-sampleapp/src/main/res/layout/item_card_list.xml
@@ -10,7 +10,7 @@
         android:id="@+id/cardId"
         android:layout_width="97dp"
         android:layout_height="40dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
         android:scaleType="centerCrop" />
 
     <TextView
@@ -28,7 +28,6 @@
         android:id="@+id/redeemedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:text="@string/button_redeemCard" />
 </RelativeLayout>
